name:
  haskell-cube
version:
  0.1.0.0
synopsis:
  Draw colored haskell cube
description:
  Please see README.md
homepage:
  https://github.com/jxv/gl-primer#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Author name here
maintainer:
  https://github.com/jxv
copyright:
  2016 Author name here
category:
  Graphics
build-type:
  Simple
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    GLPrimer.HaskellCube.Main
  build-depends:
      base >= 4.7 && < 5
    , mtl
    , transformers
    , vector
    , text
    , gl
    , GLFW-b
    , linear
    , distributive
    , lens
    , JuicyPixels
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections

executable haskell-cube-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , haskell-cube
  default-language:
    Haskell2010

test-suite haskell-cube-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , gl-primer
    , hspec
    , mtl
    , test-fixture
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell

source-repository head
  type:
    git
  location:
    https://github.com/jxv/gl-primer
